# spams-python

./: .gitignore  INSTALL-package  INSTALL-windows  MANIFEST.in  PKG-INFO  README.md  Release-name  TODO  compile.m  make_matlab_package.sh  meson.build  myscipy_rand.py  openblas_support.py  openmp_helpers.py  pyproject.toml  setup.py  spams.h  spams.py  spams_wrap-windows.cpp  spams_wrap.cpp  spams_wrap.py  test_linalg.py  test_prox.py  test_spams.py  test_utils.py  win-build.sh
.github/workflows/: cibuildwheel.yml  codeql-analysis.yml
cpp_library/.svn/: all-wcprops  entries
cpp_library/.svn/text-base/: spams.h.svn-base
dags/.svn/: all-wcprops  entries
dags/mex/.svn/: all-wcprops  entries
data/.svn/: all-wcprops  entries
decomp/.svn/: all-wcprops  entries
decomp/mex/.svn/: all-wcprops  entries
dictLearn/.svn/: all-wcprops  entries
dictLearn/mex/.svn/: all-wcprops  entries
doc/.svn/: all-wcprops  entries
doc/html/.svn/: all-wcprops  entries
image/.svn/: all-wcprops  entries
image/mex/.svn/: all-wcprops  entries
linalg/: linalg.h  utils.h
linalg/.svn/: all-wcprops  entries
linalg/mex/.svn/: all-wcprops  entries
prox/: svm.h
prox/.svn/: all-wcprops  entries
prox/.svn/text-base/: fista.h.svn-base
prox/mex/: mexSvmSdca.cpp
prox/mex/.svn/: all-wcprops  entries
spams/: __init__.py  spams.py  test_decomp.py  test_dictLearn.py  test_spams.py
spams_wrap/: __init__.py  spams.h  spams_wrap-windows.cpp  spams_wrap.cpp  spams_wrap.py
spams_wrap/linalg/: misc.h
spams_wrap/spams/decomp/: decomp.h
spams_wrap/spams/dictLearn/: dicts.h
spams_wrap/spams/linalg/: cblas_alt_template.h  cython_blas_lapack.c  cython_blas_lapack.h  cython_blas_lapack.pyx  linalg.h  misc.h
spams_wrap/spams/prox/: fista.h  groups-graph.h
sphinx/: genindex.html  index.html  objects.inv  search.html  searchindex.js
src_release/.svn/: all-wcprops  entries
swig/: doclib.ph  mkRelease  mkchangelog  setRelease  spams-tst.h
swig/.svn/: all-wcprops  entries
swig/.svn/text-base/: README.svn-base  conv-matlab-array.svn-base  doc-devel.txt.svn-base  lang-translate.txt.svn-base  mkdoc.svn-base  spams.i.svn-base  spamstools.i.svn-base
swig/R/: INSTALL-windows.in  Makevars  Makevars-g  Makevars.win  README  doclib.ph  docmatlab2R  mkhtml  notes-gforge.txt  r_debug.R  r_spams.R  spams.i  test_decomp.R  test_linalg.R  test_prox.R  test_spams.R  tstfista.R  tstprox.R  zzz.R
swig/R/.svn/: all-wcprops  entries
swig/R/.svn/text-base/: ALIRE.svn-base  DESCRIPTION.in.svn-base  INSTALL-package.in.svn-base  NAMESPACE.svn-base  R_typemaps.i.svn-base  clean.svn-base  doclib.ph.svn-base  install.tex.svn-base  mkdist.svn-base  mybuild.svn-base  png_0.1-4.tar.gz.svn-base  spams-R.iss.in.svn-base  spams-tst.h.svn-base  spams.i.svn-base  spamstools.i.svn-base  test_dictLearn.R.svn-base  tst-gm.R.svn-base  tst2.png.svn-base  tstlasso.R.svn-base  tsttraindl.R.svn-base  win-build.bat.svn-base  win-build.sh.svn-base
swig/R/pkg/.svn/: all-wcprops  entries
swig/R/spams/: dictLearn  linalg  prox
swig/R/spams/.svn/: all-wcprops  entries
swig/R/spams/.svn/text-base/: dictLearn.svn-base
swig/extdata/.svn/: all-wcprops  entries
swig/extdata/.svn/text-base/: boat.png.svn-base  lena.png.svn-base
swig/python/: INSTALL-package.in  INSTALL-windows.in  MANIFEST.in  README  install.tex  mtopy  notes-gforge.txt  refman  setup.py.in  spams-tst.h  spams.h  spamstools.i  tst.cpp  tst.sh  tsttraindl.m
swig/python/.svn/: all-wcprops  entries
swig/python/.svn/text-base/: ALIRE.svn-base  COPYING.svn-base  boat.png.svn-base  clean.svn-base  docmatlab2python.svn-base  lena.png.svn-base  mkdist.svn-base  mkpy.svn-base  py_typemaps.i.svn-base  refman.svn-base  spams.h.svn-base  spams.py.svn-base  spams_debug.py.svn-base  tstcalc.py.svn-base  tstfista.py.svn-base  tstlasso.py.svn-base  tstprox.py.svn-base  tsttraindl.py.svn-base  win-build.bat.svn-base
swig/python/PIL-win64/: README
swig/python/PIL-win64/.svn/: all-wcprops  entries
swig/python/PIL-win64/.svn/text-base/: mk.sh.svn-base  setup.py.svn-base
swig/python/doc-src/: conf.py
swig/python/doc-src/.svn/: all-wcprops  entries
swig/python/doc-src/.svn/text-base/: Makefile.svn-base  make.bat.svn-base
swig/python/spams/: decomp
swig/python/spams/.svn/: all-wcprops  entries
swig/python/spams/.svn/text-base/: decomp.svn-base  linalg.svn-base  prox.svn-base
swig/python/text_dictlearn/: INSTALL  dict_gui.ui  dparams_gui.py  mktextdata.py  viewdecomp_gui.py  viewdecomp_gui.ui  viewdict_gui.ui
swig/python/text_dictlearn/.svn/: all-wcprops  entries
swig/python/text_dictlearn/.svn/text-base/: ALIRE.svn-base  README.svn-base  dict_gui.py.svn-base  dparams_gui.ui.svn-base  mkdist.svn-base  mkdoc.svn-base  myoptions.py.svn-base  viewdict_gui.py.svn-base
swig/python/text_dictlearn/doc/: Makefile  macrocss.hva  macros.tex  style.css
swig/python/text_dictlearn/doc/.svn/: all-wcprops  entries
swig/python/text_dictlearn/doc/.svn/text-base/: doc_dictlearn.tex.svn-base  macrocss.hva.svn-base  macros.tex.svn-base  style.css.svn-base
swig/python/text_dictlearn/doc/html/.svn/: all-wcprops  entries
swig/refman/: fistaFlat.in  fistaTree.in  graphOfGroupStruct.in  gstruct.inc  lasso.in  nmf.in  nnsc.in  proximal.inc  proximalFlat.in  spams-package.Rd  spams.im2col_sliding.Rd  trainDL.in  traindl.inc  treeOfGroupStruct.in
swig/refman/.svn/: all-wcprops  entries
swig/refman/.svn/text-base/: fista.inc.svn-base  fistaGraph.in.svn-base  lassoMask.in.svn-base  omp.in.svn-base  ompMask.in.svn-base  proximalGraph.in.svn-base  proximalTree.in.svn-base  regul.inc.svn-base  sort.in.svn-base  spams.mult.Rd.svn-base  sparseProject.in.svn-base  structTrainDL.in.svn-base  trainDL_Memory.in.svn-base
test/: test_decomp.py  test_dictLearn.py  test_linalg.py  test_prox.py  test_spams.py  test_utils.py
test_release/.svn/: all-wcprops  entries
tools/: cibw_before_build.sh  cibw_before_build_linux.sh  cibw_before_build_macos.sh  cibw_before_build_win.sh  cibw_before_build_windows.sh  openblas_support.py  py_typemaps.i  run_swig.sh  spams.i
