[build-system]
requires = ["numpy>=2.0",
            "meson-python>=0.15",
            "wheel"]
build-backend = "mesonpy"

[project]
name='spams-bin'
requires-python='>=3.9.0'
version='2.6.12'
dependencies=['numpy>=1.21.3',
              'scipy>=1.5']
license = {text = "GPLv2"}
readme = "README.md"
description='Python interface for SPAMS - binary wheels with openblas (mac, linux, windows)'
author='Julien Mairal'
author_email='spams.dev@inria.fr'
url='http://spams-devel.gforge.inria.fr/'

long_description = """Python interface for SPArse Modeling Software (SPAMS),
an optimization toolbox for solving various sparse estimation problems.
This (unofficial) version includes pre-built wheels for python 3 on windows, mac (with openmp support) and linux.
The source code for this fork is also available at https://github.com/samuelstjean/spams-python/"""

[project.optional-dependencies]
test = ['Pillow>=6.0']
